--- a/04_secrets-argo-cd/overlays/production/argocd-repo-server-ksops-patch.yaml
+++ b/04_secrets-argo-cd/overlays/production/argocd-repo-server-ksops-patch.yaml
@@ -18,7 +18,7 @@ spec:
         - name: install-ksops
           # Match Argo CD Go version
           # see https://github.com/argoproj/argo-cd/blob/stable/Dockerfile
-          image: clelange/ksops:v2.2.0-barbican
+          image: clelange/ksops:v2.2.0-1-barbican
           command: ["/bin/sh", "-c"]
           args:
             - echo "Installing KSOPS...";
